third_party/rust/chromium_crates_io/vendor/toml_edit-0.22.22/tests/fixtures/invalid/table/append-with-dotted-keys-1.stderr
TOML parse error at line 17, column 3
   |
17 |   b.c.t = "Using dotted keys to add to [a.b.c] after explicitly defining it above is not allowed"
   |   ^
duplicate key `c`
